--- a/signup.html
+++ b/signup.html
@@ -53,6 +53,7 @@
                 <option>Surabaya</option>
             </select>
         </p>
+        <input type="submit" value="Daftar Sekarang" />
     </form>
 </body>
 
