--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
     </div>
     <footer>
         copyright &copy; by Bukapalak
-        <button class="btn btn-success"> <a href="biodata.html">Profile</a></button>
+        <button class="btn btn-success"> <a href="index.html">Profile</a></button>
     </footer>
 </body>
 
