--- a/home.html
+++ b/home.html
@@ -3,9 +3,10 @@
 <head>
     <title>Bukapalak</title>
     <link href="style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </head>
 
@@ -29,21 +30,24 @@
         </div>
         <div class="item">
             <div id="sepatu">
-                <img src="https://s3.bukalapak.com/img/3427168275/s-194-194/Bonus_kaos_kaki_Sepatu_pria_adidas_Felix_safety_shoes_low_bo.jpg.webp" />
+                <img
+                    src="https://s3.bukalapak.com/img/3427168275/s-194-194/Bonus_kaos_kaki_Sepatu_pria_adidas_Felix_safety_shoes_low_bo.jpg.webp" />
                 <br>
                 <strong>Sepatu Fashion</strong>
             </div>
         </div>
         <div class="item">
             <div id="sepatu">
-                <img src="https://s3.bukalapak.com/img/3427168275/s-194-194/Bonus_kaos_kaki_Sepatu_pria_adidas_Felix_safety_shoes_low_bo.jpg.webp" />
+                <img
+                    src="https://s3.bukalapak.com/img/3427168275/s-194-194/Bonus_kaos_kaki_Sepatu_pria_adidas_Felix_safety_shoes_low_bo.jpg.webp" />
                 <br>
                 <strong>Sepatu Fashion</strong>
             </div>
         </div>
         <div class="item">
             <div id="sepatu">
-                <img src="https://s3.bukalapak.com/img/3427168275/s-194-194/Bonus_kaos_kaki_Sepatu_pria_adidas_Felix_safety_shoes_low_bo.jpg.webp" />
+                <img
+                    src="https://s3.bukalapak.com/img/3427168275/s-194-194/Bonus_kaos_kaki_Sepatu_pria_adidas_Felix_safety_shoes_low_bo.jpg.webp" />
                 <br>
                 <strong>Sepatu Fashion</strong>
             </div>
