--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <link href="biodata.css" rel="stylesheet" />
+    <link href="navbar.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
@@ -9,13 +10,18 @@
 </head>
 
 <body>
+    <header class="navbar">
+        <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="progress.html">Hacktiv8 Progress</a></li>
+        </ul>
+    </header>
     <p class="picture">
         <img width="200px" height="200px" class="avatar" src="https://avatars3.githubusercontent.com/u/28675081?s=460&v=4" />
     </p>
     <div class="text">
         <p class="name">Joko Sarjono S</p>
-        <p>Sragen, 28 Desember 1992</p>
-        <p class="quote">Do The Best Let God Do The Rest</p>
     </div>
 </body>
 
