Add Progress CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="navbar">
+    <header class="dropdown">
         <ul>
             <li><a href="">About</a></li>
             <li><a href="">Portfolio</a></li>
