--- a/progress.html
+++ b/progress.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="progress.css" type="text/css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Progress Hacktiv 8</title>
 </head>
+
 <body>
-    <h1>Phase 0 - Week 1</h1>
-    <h2>Tugas 1</h2>
-    <img src="https://github.com/jokoss92/hacktiv8-course-project/blob/master/phase-0/week-1/Codecademy-HTML.jpeg">
-    
+    <div class="header">
+        <h1>Phase 0 - Week 1</h1>
+    </div>
+    <div class="row">
+        <div class="leftcolumn">
+            <div class="card">
+                <h2>Tugas 1</h2>
+                <p>Tugas 1 adalah menyelesaikan Course Codecademy : <a
+                        href="https://www.codecademy.com/learn/learn-html">Introduction to HTML</a> </p>
+                <img src="https://i.ibb.co/5401tXB/Codecademy-HTML-700.jpg">
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
