Add link social media

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="dropdown">
         <ul>
-            <li><a href="">About</a></li>
+            <li><a href="index.html">About</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="progress.html">Hacktiv8 Progress</a></li>
         </ul>
@@ -22,6 +22,13 @@
     </p>
     <div class="text">
         <p class="name">Joko Sarjono S</p>
+       <a href="https://www.facebook.com/johno.jss"><img src="img/facebook.png"></a>
+       <a href="https://twitter.com/johnoijolumut"><img src="img/twitter.png"></a>
+       <a href="https://www.instagram.com/johnojss/"><img src="img/instagram.png"></a>
+       <a href="https://www.linkedin.com/in/joko-sarjono-slameto-5bb64560/"><img src="img/linkedin.png"></a>
+       <a href="https://github.com/jokoss92"><img src="img/github.png"></a>
+       <a href="https://wa.me/+6283894339120"><img src="img/whatsapp.png"></a>
+       <a href="https://t.me/johno_jss"><img src="img/telegram.png"></a>
     </div>
 </body>
 
