--- a/progress.html
+++ b/progress.html
@@ -5,11 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="progress.css" type="text/css" rel="stylesheet">
+    <link href="navbar.css" type="text/css" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Progress Hacktiv 8</title>
 </head>
 
 <body>
+    <header class="dropdown">
+        <ul>
+            <li><a href="index.html">About</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="progress.html">Hacktiv8 Progress</a></li>
+        </ul>
+    </header>
     <div class="header">
         <h1>Phase 0 - Week 1</h1>
     </div>
@@ -17,8 +25,17 @@
         <div class="leftcolumn">
             <div class="card">
                 <h2>Tugas 1</h2>
-                <p>Tugas 1 adalah menyelesaikan Course Codecademy : <a
-                        href="https://www.codecademy.com/learn/learn-html">Introduction to HTML</a> </p>
+                <p>Tugas 1 adalah menyelesaikan Course Codecademy : <a href="https://www.codecademy.com/learn/learn-html">Introduction to HTML</a> dimana di dalamnya
+                    kita belajar tag-tag di HTML
+                </p>
+                <img src="https://i.ibb.co/5401tXB/Codecademy-HTML-700.jpg">
+            </div>
+        </div>
+        <div class="card">
+                <h2>Tugas 2</h2>
+                <p>Berikutnya tugas 2 adalah menyelesaikan Course Codecademy : <a href="https://www.codecademy.com/learn/learn-css">Introduction to CSS</a> dimana di dalamnya
+                    kita belajar CSS untuk mempercantik tampilan sebuah website.
+                </p>
                 <img src="https://i.ibb.co/5401tXB/Codecademy-HTML-700.jpg">
             </div>
         </div>
