--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
-    <header class="dropdown">
+    <header>
         <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="progress.html">Hacktiv8 Progress</a></li>
         </ul>
     </header>
+    <br><br>
     <p class="picture">
         <img width="200px" height="200px" class="avatar" src="https://avatars3.githubusercontent.com/u/28675081?s=460&v=4" />
     </p>
