--- a/progress.html
+++ b/progress.html
@@ -25,20 +25,28 @@
         <div class="leftcolumn">
             <div class="card">
                 <h2>Tugas 1</h2>
-                <p>Tugas 1 adalah menyelesaikan Course Codecademy : <a href="https://www.codecademy.com/learn/learn-html">Introduction to HTML</a> dimana di dalamnya
+                <p>Tugas 1 adalah menyelesaikan Course Codecademy : <a
+                        href="https://www.codecademy.com/learn/learn-html">Introduction to HTML</a> dimana di dalamnya
                     kita belajar tag-tag di HTML
                 </p>
                 <img src="https://i.ibb.co/5401tXB/Codecademy-HTML-700.jpg">
             </div>
         </div>
         <div class="card">
-                <h2>Tugas 2</h2>
-                <p>Berikutnya tugas 2 adalah menyelesaikan Course Codecademy : <a href="https://www.codecademy.com/learn/learn-css">Introduction to CSS</a> dimana di dalamnya
-                    kita belajar CSS untuk mempercantik tampilan sebuah website.
-                </p>
-                <img src="https://i.ibb.co/5401tXB/Codecademy-HTML-700.jpg">
-            </div>
+            <h2>Tugas 2</h2>
+            <p>Berikutnya tugas 2 adalah menyelesaikan Course Codecademy : <a
+                    href="https://www.codecademy.com/learn/learn-css">Introduction to CSS</a> dimana di dalamnya
+                kita belajar CSS untuk mempercantik tampilan sebuah website.
+            </p>
+            <img src="https://i.ibb.co/5401tXB/Codecademy-HTML-700.jpg">
         </div>
+    </div>
+    <div class="card">
+        <h2>Tugas 3</h2>
+        <p>Tugas 3 adalah membuat website pribadi dan dihosting ke github  : 
+        </p>
+        <video controls src="https://zippy.gfycat.com/TalkativeEnormousArmednylonshrimp.webm"></video>"
+    </div>
     </div>
 
 </body>
