--- a/progress.html
+++ b/progress.html
@@ -14,17 +14,20 @@
     <header class="dropdown">
         <ul>
             <li><a href="index.html">About</a></li>
-            <li><a href="">Portfolio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="progress.html">Hacktiv8 Progress</a></li>
         </ul>
     </header>
     <div class="header">
-        <h1>Phase 0 - Week 1</h1>
+        <h1>Phase 0</h1>
     </div>
     <div class="row">
         <div class="leftcolumn">
             <div class="card">
-                <h2>Tugas 1</h2>
+                <h2>Week 1</h2>
+            </div>
+            <div class="card">
+                <h3>Tugas 1</h3>
                 <p>Tugas 1 adalah menyelesaikan Course Codecademy : <a
                         href="https://www.codecademy.com/learn/learn-html">Introduction to HTML</a> dimana di dalamnya
                     kita belajar tag-tag di HTML
@@ -33,7 +36,7 @@
             </div>
         </div>
         <div class="card">
-            <h2>Tugas 2</h2>
+            <h3>Tugas 2</h3>
             <p>Berikutnya tugas 2 adalah menyelesaikan Course Codecademy : <a
                     href="https://www.codecademy.com/learn/learn-css">Introduction to CSS</a> dimana di dalamnya
                 kita belajar CSS untuk mempercantik tampilan sebuah website.
@@ -42,12 +45,21 @@
         </div>
     </div>
     <div class="card">
-        <h2>Tugas 3</h2>
-        <p>Tugas 3 adalah membuat website pribadi dan dihosting ke github  : 
+        <h3>Tugas 3</h3>
+        <p>Tugas 3 adalah membuat website pribadi dan dihosting ke github :
         </p>
         <video controls src="https://zippy.gfycat.com/TalkativeEnormousArmednylonshrimp.webm"></video>"
     </div>
+    <div class="card">
+        <h3>Tugas Pribadi dan Lain-lain</h3>
+        <ul>
+            <li><a href="https://tugas-pribadi1.netlify.com/">Tugas Pribadi 1</a></li>
+            <li><a href="https://tugas-pribadi2.netlify.com/">Tugas Pribadi 2</a></li>
+            <li><a href="https://tugas-pribadi3.netlify.com/">Tugas Pribadi 3</a></li>
+        </ul>
     </div>
+    </div>
+    <div class="footer"><strong>Joko Sarjono Slameto</strong></div>
 
 </body>
 
