--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <ul>
             <li><a href="index.html">About</a></li>
-            <li><a href="">Portfolio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="progress.html">Hacktiv8 Progress</a></li>
         </ul>
     </header>
