Add Download CV

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
        <a href="https://github.com/jokoss92"><img src="img/github.png"></a>
        <a href="https://wa.me/+6283894339120"><img src="img/whatsapp.png"></a>
        <a href="https://t.me/johno_jss"><img src="img/telegram.png"></a>
+       <br>
+       <br><button class="btn btn-dark"><a href="https://www.dropbox.com/s/fxxq46r946msl6h/my-cv.pdf?dl=0">Download My CV</a></button>
     </div>
 </body>
 
