--- a/portfolio.html
+++ b/portfolio.html
@@ -1,27 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="progress.css" type="text/css" rel="stylesheet">
-    <link href="navbar.css" type="text/css" rel="stylesheet">
-    <title>Portfolio</title>
+<title>Coming Soon</title>
+<style>
+  body { text-align: center; padding: 150px; }
+  h1 { font-size: 50px; }
+  body { font: 20px Helvetica, sans-serif; color: #333; }
+  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
+  a { color: #dc8100; text-decoration: none; }
+  a:hover { color: #333; text-decoration: none; }
+</style>
 </head>
-<body background="black">
-        <header class="dropdown">
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="progress.html">Hacktiv8 Progress</a></li>
-                </ul>
-            </header>
-    <h1>Portfolio</h1>
-   <ul>
-       <li><a href="https://tugas-kelompok-7.netlify.com/">Tugas Kelompok 7</a></li>
-       <li><a href="https://final-project-joko.netlify.com/">Tugas Clone Santren Koding</a></li>
-       <li><a href="https://joko-mws.firebaseapp.com/">Tugas Firebase</a></li>
-   </ul>
-    
+<body>
+<article>
+    <h1>Coming Soon</h1>
+    <div>
+        <p>I know maybe it's taking a long time but hang in there. If you need, you can always <a href="mailto:joko.sarjono.s92@gmail.com">contact me</a>, otherwise I&rsquo;ll be back online (but maybe not) shortly!</p>
+        <p>&mdash; Your Friendly Friend</p>
+    </div>
+</article>
 </body>
 </html>
