--- a/progress.html
+++ b/progress.html
@@ -19,46 +19,45 @@
         </ul>
     </header>
     <div class="header">
-        <h1>Phase 0</h1>
+        <img src="https://hacktiv8.com/img/fox.png__vzu2vhp2VRX%2Bewg7J0bPlaAa9e377ae39495073d0e66db163fc8d9b">
+        <h1>Progress on Hacktiv8</h1>
     </div>
     <div class="row">
         <div class="leftcolumn">
-            <div class="card">
-                <h2>Week 1</h2>
-            </div>
-            <div class="card">
-                <h3>Tugas 1</h3>
-                <p>Tugas 1 adalah menyelesaikan Course Codecademy : <a
-                        href="https://www.codecademy.com/learn/learn-html">Introduction to HTML</a> dimana di dalamnya
-                    kita belajar tag-tag di HTML
-                </p>
-                <img src="https://i.ibb.co/5401tXB/Codecademy-HTML-700.jpg">
+            <div class="week1">
+                <div class="card">
+                    <h2>Phase 0 Week 1</h2>
+                    <h3>Tugas 1</h3>
+                    <div class="blog-img">
+                        <img src="https://i.ibb.co/5401tXB/Codecademy-HTML-700.jpg">
+                    </div>
+                    <p>Tugas 1 adalah menyelesaikan Course Codecademy : <a
+                            href="https://www.codecademy.com/learn/learn-html">Introduction to HTML</a> dimana di
+                        dalamnya
+                        kita belajar tag-tag di HTML
+                    </p>
+                    <h3>Tugas 2</h3>
+                    <div class="blog-img">
+                        <img src="https://i.ibb.co/Ksh8YDc/Codecademy-CSS-700p.jpg">
+                    </div>
+                    <p>Berikutnya tugas 2 adalah menyelesaikan Course Codecademy : <a
+                            href="https://www.codecademy.com/learn/learn-css">Introduction to CSS</a> dimana di dalamnya
+                        kita belajar CSS untuk mempercantik tampilan sebuah website.
+                    </p>
+                    <h3>Tugas 3</h3>
+                    <p>Tugas 3 adalah membuat website pribadi dan dihosting ke github :
+                    </p>
+                    <video controls src="https://zippy.gfycat.com/TalkativeEnormousArmednylonshrimp.webm"></video>"
+                </div>
             </div>
         </div>
-        <div class="card">
-            <h3>Tugas 2</h3>
-            <p>Berikutnya tugas 2 adalah menyelesaikan Course Codecademy : <a
-                    href="https://www.codecademy.com/learn/learn-css">Introduction to CSS</a> dimana di dalamnya
-                kita belajar CSS untuk mempercantik tampilan sebuah website.
-            </p>
-            <img src="https://i.ibb.co/5401tXB/Codecademy-HTML-700.jpg">
+        <br>
+        <div class="rightcolumn">
+            <div class="fakeimg"><a href="#week1">Week 1</a></div>
         </div>
     </div>
-    <div class="card">
-        <h3>Tugas 3</h3>
-        <p>Tugas 3 adalah membuat website pribadi dan dihosting ke github :
-        </p>
-        <video controls src="https://zippy.gfycat.com/TalkativeEnormousArmednylonshrimp.webm"></video>"
-    </div>
-    <div class="card">
-        <h3>Tugas Pribadi dan Lain-lain</h3>
-        <ul>
-            <li><a href="https://tugas-pribadi1.netlify.com/">Tugas Pribadi 1</a></li>
-            <li><a href="https://tugas-pribadi2.netlify.com/">Tugas Pribadi 2</a></li>
-            <li><a href="https://tugas-pribadi3.netlify.com/">Tugas Pribadi 3</a></li>
-        </ul>
-    </div>
-    </div>
+
+
     <div class="footer"><strong>Joko Sarjono Slameto</strong></div>
 
 </body>
