Add Back to index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <h1>Coming Soon</h1>
     <div>
         <p>I know maybe it's taking a long time but hang in there. If you need, you can always <a href="mailto:joko.sarjono.s92@gmail.com">contact me</a>, otherwise I&rsquo;ll be back online (but maybe not) shortly!</p>
-        <p>&mdash; Your Friendly Friend</p>
+        <p><a href="index.html">&mdash; Your Friendly Friend</a></p>
     </div>
 </article>
 </body>
