--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 <head>
     <link href="biodata.css" rel="stylesheet" />
     <link href="navbar.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -14,7 +10,7 @@
         <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="progress.html">Hacktiv8 Progress</a></li>
+            <li><a href="progress.html">Blog</a></li>
         </ul>
     </header>
     <br><br>
