--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="progress.html">Blog</a></li>
+            <!-- <li><a href="progress.html">Blog</a></li> -->
         </ul>
     </header>
     <br><br>
