Move profil picture to Google Storage

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <link href="biodata.css" rel="stylesheet" />
     <link href="navbar.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </head>
 
 <body>
@@ -15,19 +20,21 @@
     </header>
     <br><br>
     <p class="picture">
-        <img width="200px" height="200px" class="avatar" src="https://avatars3.githubusercontent.com/u/28675081?s=460&v=4" />
+        <img width="200px" height="200px" class="avatar"
+            src="https://storage.googleapis.com/dicoding-joko-bucket/profil.jpeg" />
     </p>
     <div class="text">
         <p class="name">Joko Sarjono S</p>
-       <a href="https://www.facebook.com/johno.jss"><img src="img/facebook.png"></a>
-       <a href="https://twitter.com/johnoijolumut"><img src="img/twitter.png"></a>
-       <a href="https://www.instagram.com/johnojss/"><img src="img/instagram.png"></a>
-       <a href="https://www.linkedin.com/in/joko-sarjono-slameto-5bb64560/"><img src="img/linkedin.png"></a>
-       <a href="https://github.com/jokoss92"><img src="img/github.png"></a>
-       <a href="https://wa.me/+6283894339120"><img src="img/whatsapp.png"></a>
-       <a href="https://t.me/johno_jss"><img src="img/telegram.png"></a>
-       <br>
-       <br><button class="btn btn-dark"><a href="https://www.dropbox.com/s/fxxq46r946msl6h/my-cv.pdf?dl=0">Download My CV</a></button>
+        <a href="https://www.facebook.com/johno.jss"><img src="img/facebook.png"></a>
+        <a href="https://twitter.com/johnoijolumut"><img src="img/twitter.png"></a>
+        <a href="https://www.instagram.com/johnojss/"><img src="img/instagram.png"></a>
+        <a href="https://www.linkedin.com/in/joko-sarjono-slameto-5bb64560/"><img src="img/linkedin.png"></a>
+        <a href="https://github.com/jokoss92"><img src="img/github.png"></a>
+        <a href="https://wa.me/+6283894339120"><img src="img/whatsapp.png"></a>
+        <a href="https://t.me/johno_jss"><img src="img/telegram.png"></a>
+        <br>
+        <br><button class="btn btn-dark"><a href="https://www.dropbox.com/s/fxxq46r946msl6h/my-cv.pdf?dl=0">Download My
+                CV</a></button>
     </div>
 </body>
 
