--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="https://t.me/johno_jss"><img src="img/telegram.png"></a>
         <br>
         <br><button class="btn btn-dark"><a href="https://www.dropbox.com/s/fxxq46r946msl6h/my-cv.pdf?dl=0">Download My CV</a></button>
-        <br>
+        <br><br><br>
         <!--Konten LIFF v2-->
 
         <div id="liffAppContent">
@@ -49,7 +49,7 @@
             </div>
 
             <!-- LIFF DATA -->
-            <div id="liffData">
+            <!-- <div id="liffData">
                 <h3 id="liffDataHeader" class="textLeft">Informasi:</h3>
                 <table>
                     <tr>
@@ -61,13 +61,13 @@
                         <td id="isLoggedIn" class="textLeft"></td>
                     </tr>
                 </table>
-            </div>
+            </div> -->
             <!-- LOGIN LOGOUT BUTTONS -->
-            <div class="buttonGroup">
+            <!-- <div class="buttonGroup">
                 <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
                 <button id="liffLogoutButton" class="btn btn-warning btn-small">Log out</button>
-            </div>
-            <div id="statusMessage">
+            </div> -->
+            <!-- <div id="statusMessage">
                 <div id="isInClientMessage"></div>
                 <div id="apiReferenceMessage">
                     <p>Available LIFF methods vary depending on the browser you use to open the LIFF app.</p>
@@ -76,10 +76,10 @@
                             page</a> for more information.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- LIFF ID ERROR -->
-        <div id="liffIdErrorMessage" class="hidden">
-            <p>You have not assigned any value for LIFF ID.</p>
+        <!-- <div id="liffIdErrorMessage" class="hidden">
+            <p>You have not assigned any value for LIFF ID.</p> -->
             <!-- <p>If you are running the app using Node.js, please set the LIFF ID as an environment variable in your
                 Heroku account follwing the below steps: </p>
             <code id="code-block">
