--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
 
             <!-- LIFF DATA -->
-            <!-- <div id="liffData">
+            <div id="liffData">
                 <h3 id="liffDataHeader" class="textLeft">Informasi:</h3>
                 <table>
                     <tr>
@@ -61,13 +61,13 @@
                         <td id="isLoggedIn" class="textLeft"></td>
                     </tr>
                 </table>
-            </div> -->
+            </div>
             <!-- LOGIN LOGOUT BUTTONS -->
-            <!-- <div class="buttonGroup">
+            <div class="buttonGroup">
                 <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
                 <button id="liffLogoutButton" class="btn btn-warning btn-small">Log out</button>
-            </div> -->
-            <!-- <div id="statusMessage">
+            </div>
+            <div id="statusMessage">
                 <div id="isInClientMessage"></div>
                 <div id="apiReferenceMessage">
                     <p>Available LIFF methods vary depending on the browser you use to open the LIFF app.</p>
@@ -76,11 +76,11 @@
                             page</a> for more information.</p>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- LIFF ID ERROR -->
-        <!-- <div id="liffIdErrorMessage" class="hidden">
+        <div id="liffIdErrorMessage" class="hidden">
             <p>You have not assigned any value for LIFF ID.</p> -->
-            <!-- <p>If you are running the app using Node.js, please set the LIFF ID as an environment variable in your
+             <p>If you are running the app using Node.js, please set the LIFF ID as an environment variable in your
                 Heroku account follwing the below steps: </p>
             <code id="code-block">
                 <ol>
@@ -95,17 +95,17 @@
             <p>For more information about how to add your LIFF ID, see <a
                     href="https://developers.line.biz/en/reference/liff/#initialize-liff-app">Initializing the LIFF
                     app</a>.</p>
-        </div> -->
-        <!-- LIFF INIT ERROR
+        </div>
+        <!-- LIFF INIT ERROR -->
         <div id="liffInitErrorMessage" class="hidden">
             <p>Something went wrong with LIFF initialization.</p>
             <p>LIFF initialization can fail if a user clicks "Cancel" on the "Grant permission" screen, or if an error
                 occurs in the process of <code>liff.init()</code>.
         </div>
         <!-- NODE.JS LIFF ID ERROR -->
-        <!-- <div id="nodeLiffIdErrorMessage" class="hidden">
+        <div id="nodeLiffIdErrorMessage" class="hidden">
             <p>Unable to receive the LIFF ID as an environment variable.</p>
-        </div> --> 
+        </div> 
     </div>
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script src="liff-starter.js"></script>
